--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+2015-06-04
+	* Hard-code the preNextButton callback for the licence agreement,
+	  as implicitly requested in RT 67003.
+
+2015-06-02
+	* Lack of POD encoding directive in Image.pm caused test failures
+
 2010-03-16
 
 	* Update Win32 shortcut hotkey args after M Thurn spotted change in API
