--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+2015-06-10
+	* Alex's 'really_quit' patch
+
 2015-06-04
 	* Hard-code the preNextButton callback for the licence agreement,
 	  as implicitly requested in RT 67003.
